# PAOO_Tema_II

src/: CMakeLists.txt  main.cpp
src/Person/: CMakeLists.txt  IPerson.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
src/PersonManager/: CMakeLists.txt  PersonArray.cpp  PersonArray.h
src/PointerManager/: CMakeLists.txt  Counter.cpp  Counter.h
src/Subject/: Biology.cpp  Biology.h  CMakeLists.txt  Chemistry.cpp  Chemistry.h  ExtracurricularSubject.cpp  ExtracurricularSubject.h  ISubject.h  Subject.cpp  Subject.h
